# voxel-tree-rs

./: .gitmodules  Cargo.toml
article/: abbr-impl.typ  abbr.typ  abbreviations.typ  ieee-template.typ  keywords.typ  main.typ  markers.typ  refs.bib  todo.typ
article/sections/: abstract.typ  discussion.typ  future_work.typ  index.typ  indices.typ  intro.typ  methods.typ  mod.typ  prior_work.typ  results.typ
crates/bvh/: Cargo.toml
crates/bvh/src/: bounds.rs  id.rs  lib.rs  node.rs  octree.rs  pool.rs  volume_hash.rs
crates/bvh/src/numerics/: bvec3.rs  mod.rs  tunit.rs  tvec.rs  vec3.rs
crates/client/: Cargo.toml
crates/client/assets/shaders/: point.wgsl  raymarch.wgsl
crates/client/src/: egui_tools.rs  lib.rs
crates/client/src/app/: mod.rs  point_cloud.rs  shader.wgsl  space_colony.rs  state.rs
crates/client/src/gpu/: mod.rs  query.rs
crates/client/src/numerics/: dist.rs  mod.rs  octree.rs  rstar.rs  spatial.rs
crates/client/src/platform/: mod.rs
crates/client/src/platform/android/: mod.rs
crates/client/src/sync/: mod.rs  mpsc.rs
crates/egui-wgpu/: Cargo.toml
crates/egui-wgpu/src/: lib.rs  renderer.rs  setup.rs
crates/numerics/: Cargo.toml
crates/numerics/src/: binary_int.rs  lib.rs  sphere.rs
crates/numerics/src/vec/: bvec3.rs  mod.rs  simd.rs  tvec.rs  vec3.rs  vec3a.rs
crates/pool/: Cargo.toml
crates/pool/src/: lib.rs
crates/spacol/: Cargo.toml
crates/spacol/src/: algo.rs  attractor.rs  lib.rs  node.rs  rstar.rs
src/: main.rs  shader.wgsl
