[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = "full"

[workspace.dependencies]
bevy_math = { version = ">=0.9" }
bytemuck = "1.25.0"
env_logger = "0.11"
glam = { version = "0.30", features = ["bytemuck"] }
num = { version = "0.4", default-features = false }
pollster = "0.4"
wgpu = "29.0"
winit = "0.30.12"

rand = "0.10"
foldhash = "0.2"

hashbrown = "0.16"
smallvec = { version = "1.13", features = ["const_generics"] }

tracing = "0.1"
tracing-subscriber = "0.3"

oktree.path = "crates/oktree"
bvh.path = "crates/bvh"

egui = "0.33.3"
egui_plot = "0.34.1"
egui-wgpu = { path = "crates/egui-wgpu" }
egui-winit = "0.33.3"

epaint = { version = "0.33.3", default-features = false }
epaint_default_fonts = { version = "0.33.3" }

ahash = { version = "0.8.12", default-features = false, features = [
  "no-rng", # we don't need DOS-protection, so we let users opt-in to it instead
  "std",
] }
document-features = "0.2.11"
log = { version = "0.4.28", features = ["std"] }
log-panics = "2.1"
profiling = { version = "1.0.17", default-features = false }
thiserror = "2.0.17"
type-map = "0.5.1"
web-time = "1.1.0" # Timekeeping for native and web

android-activity = "0.6.0"
android_logger = "0.15"

[workspace.lints]