[package]
name = "egui-wgpu"
version = "0.33.3"
description = "Bindings for using egui natively using the wgpu library"
authors = [
  "Nils Hasenbanck <nils@hasenbanck.de>",
  "embotech <opensource@embotech.com>",
  "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>",
]
edition.workspace = true
homepage = "https://github.com/emilk/egui/tree/main/crates/egui-wgpu"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/main/crates/egui-wgpu"
categories = ["gui", "game-development"]
keywords = ["wgpu", "egui", "gui", "gamedev"]
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "**/*.wgsl", "Cargo.toml"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[features]
default = ["fragile-send-sync-non-atomic-wasm"]

fragile-send-sync-non-atomic-wasm = ["wgpu/fragile-send-sync-non-atomic-wasm"]

capture = ["dep:egui"]

## Enable [`winit`](https://docs.rs/winit) integration. On Linux, requires either `wayland` or `x11`
winit = ["dep:winit", "dep:egui", "capture"]

[dependencies]
epaint = { workspace = true, features = ["bytemuck"] }

ahash.workspace = true
bytemuck.workspace = true
document-features.workspace = true
log.workspace = true
profiling.workspace = true
thiserror.workspace = true
type-map.workspace = true
web-time.workspace = true
wgpu = { workspace = true, features = ["wgsl"] }

# Optional dependencies:

egui = { workspace = true, optional = true }
winit = { workspace = true, optional = true }
